--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -1,46 +1,69 @@
 @charset "UTF-8";
 
 * {
-font-family: Times New Roman,Times,serif;
+    font-family: Times New Roman,Times,serif;
 }
 
 input[type=submit] {
-	background-color: grey;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-	color: white;
-	height: 25px;
-	width: 100px;
-	font-size:17px
+    background-color: grey;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+    height: 25px;
+    width: 100px;
+    font-size:17px
+}
+li {
+    border-right: 1px solid #bbb;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+li {
+    float: left;
+}
+li a {
+    font-size:23px;
+    color: #ff0000;
+    display: block;
+    padding: 8px;
 }
 
 /* ------------------- TABLE STYLE ------------------*/
 td {
-	font-size: 16px;
+    font-size: 16px;
 }
 
 #table {
-	border-collapse: collapse;
-	width: 60%;
+    border-collapse: collapse;
+    width: 60%;
 }
 
 #table td, #table th {
-	border: 1px solid #ddd;
-	padding: 8px;
-	font-size:16px
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-size:16px
 }
 
 #table th {
-	padding-top: 12px;
-	padding-bottom: 12px;
-	text-align: left;   
-	background-color: #544810;
-	color: white;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #544810;
+    color: white;
 }
 
 .button {
-	height: 40px;
-	padding: 0px;
-	line-heigh:3px;
-	} 
+    height: 40px;
+    padding: 0px;
+    line-heigh:3px;
+} 
