--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -14,6 +14,19 @@ input[type=submit] {
     width: 100px;
     font-size:17px
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height:15%;
+  width: 100%;
+  background-color:Grey;
+  color: black;
+  text-align: center;
+}
+
+
 li {
     border-right: 1px solid #bbb;
 }
