--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -14,6 +14,15 @@ input[type=submit] {
     width: 100px;
     font-size:17px
 }
+ .Udform{
+
+                padding-left: 300px;
+                padding-right: 200px;
+                padding-top: ‒50;
+                padding-top: 50px;
+
+                color:black
+            }
 
 .footer {
   position: fixed;
@@ -25,7 +34,11 @@ input[type=submit] {
   color: black;
   text-align: center;
 }
-
+.text{
+ display:flex;
+ align-items:center;
+flex-direction: row;
+}
 
 li {
     border-right: 1px solid #bbb;
